--- a/API/BattleShipsAPI/BattleShipsAPI/Web.config
+++ b/API/BattleShipsAPI/BattleShipsAPI/Web.config
@@ -5,6 +5,9 @@
   -->
 <configuration>
   <appSettings></appSettings>
+  <connectionStrings>
+    <add name="gmrskybase" connectionString="Server=gmrskybase; DataBase=AlexLeontievBattleships2017; User Id=AlexLeontiecAppUser; Password=swagmaster;"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
