Setting up game page and updated sql and api with more functionality

--- a/API/BattleShipsAPI/BattleShipsAPI/BattleShipsAPI.csproj
+++ b/API/BattleShipsAPI/BattleShipsAPI/BattleShipsAPI.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Models\UserInfo.cs" />
     <Compile Include="Models\UserJoin.cs" />
     <Compile Include="Models\UserReadyStatus.cs" />
+    <Compile Include="Models\UsersInRoom.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
