--- a/API/BattleShipsAPI/BattleShipsAPI/BattleShipsAPI.csproj
+++ b/API/BattleShipsAPI/BattleShipsAPI/BattleShipsAPI.csproj
@@ -182,6 +182,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\CellGameBoard.cs" />
+    <Compile Include="Models\CellStatus.cs" />
     <Compile Include="Models\GameStatus.cs" />
     <Compile Include="Models\RoomInfo.cs" />
     <Compile Include="Models\RoomItem.cs" />
